assignment_6/tests/pass/lexical/1/pass3.ram15
class Pass3 {

    public static void main(String[] identifier) {
        int[] a;
        a = new int[5];
        a[0] = 1;
        a[1] = 2;
        a[2] = 3;
        a[3] = 4;
        a[4] = 5;
        println(a.length, a.length + 1);
        println(a[-1]);
        int[] b;
        b = a[0:3];
    }
}
