assignment_6/tests/fail/syntaxerrors/1/Invalid-VarDeclInMain.ram15
class InvalidVarDeclInMain {
    int a;

    public static void main(String[] a) {
        { }
    }
}
